src/test/ui/async-await/issue-76547.nll.stderr
error: lifetime may not live long enough
  --> $DIR/issue-76547.rs:19:14
   |
LL | async fn fut(bufs: &mut [&mut [u8]]) {
   |              ^^^^  -     - let's call the lifetime of this reference `'2`
   |              |     |
   |              |     let's call the lifetime of this reference `'1`
   |              assignment requires that `'1` must outlive `'2`

error: lifetime may not live long enough
  --> $DIR/issue-76547.rs:33:15
   |
LL | async fn fut2(bufs: &mut [&mut [u8]]) -> i32 {
   |               ^^^^  -     - let's call the lifetime of this reference `'2`
   |               |     |
   |               |     let's call the lifetime of this reference `'1`
   |               assignment requires that `'1` must outlive `'2`

error: aborting due to 2 previous errors

